Add model files using Git LFS

--- a/notebooks/demo-phising-mail.ipynb
+++ b/notebooks/demo-phising-mail.ipynb
@@ -438,9 +438,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Map: 100%|██████████| 12624/12624 [01:22<00:00, 153.06 examples/s]\n",
-      "Map: 100%|██████████| 1403/1403 [00:05<00:00, 255.56 examples/s]\n",
-      "Map: 100%|██████████| 3507/3507 [00:14<00:00, 236.89 examples/s]"
+      "Map: 100%|██████████| 12624/12624 [01:22<00:00, 152.65 examples/s]\n",
+      "Map: 100%|██████████| 1403/1403 [00:04<00:00, 288.78 examples/s]\n",
+      "Map: 100%|██████████| 3507/3507 [00:14<00:00, 246.95 examples/s]"
      ]
     },
     {
@@ -536,9 +536,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Saving the dataset (1/1 shards): 100%|██████████| 12624/12624 [00:00<00:00, 307854.93 examples/s]\n",
-      "Saving the dataset (1/1 shards): 100%|██████████| 1403/1403 [00:00<00:00, 199053.16 examples/s]\n",
-      "Saving the dataset (1/1 shards): 100%|██████████| 3507/3507 [00:00<00:00, 349375.90 examples/s]"
+      "Saving the dataset (1/1 shards): 100%|██████████| 12624/12624 [00:00<00:00, 276398.82 examples/s]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 1403/1403 [00:00<00:00, 182389.30 examples/s]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 3507/3507 [00:00<00:00, 226535.82 examples/s]"
      ]
     },
     {
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "id": "39f101d5af66b5cc",
    "metadata": {
     "ExecuteTime": {
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "id": "dc53ae00ae42ee88",
    "metadata": {
     "ExecuteTime": {
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "id": "a7ff1524349e4dde",
    "metadata": {
     "ExecuteTime": {
@@ -691,7 +691,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\infan\\OneDrive\\Desktop\\AIR\\AIntelligence\\AIProjects\\PhishingMailDetection\\phisingmail-detection-cuda\\Lib\\site-packages\\transformers\\training_args.py:1575: FutureWarning: `evaluation_strategy` is deprecated and will be removed in version 4.46 of 🤗 Transformers. Use `eval_strategy` instead\n",
+      "c:\\Users\\infan\\OneDrive\\Desktop\\AIR\\AIntelligence\\AIProjects\\PhishingMailDetection\\phisingmail-detection-cuda\\Lib\\site-packages\\transformers\\training_args.py:1575: FutureWarning: `evaluation_strategy` is deprecated and will be removed in version 4.46 of 🤗 Transformers. Use `eval_strategy` instead\n",
       "  warnings.warn(\n"
      ]
     },
@@ -703,69 +703,126 @@
      ]
     },
     {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <div>\n",
-       "      \n",
-       "      <progress value='2367' max='2367' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [2367/2367 11:15, Epoch 3/3]\n",
-       "    </div>\n",
-       "    <table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       " <tr style=\"text-align: left;\">\n",
-       "      <th>Epoch</th>\n",
-       "      <th>Training Loss</th>\n",
-       "      <th>Validation Loss</th>\n",
-       "      <th>Accuracy</th>\n",
-       "      <th>Precision</th>\n",
-       "      <th>Recall</th>\n",
-       "      <th>F1</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>0.154600</td>\n",
-       "      <td>0.054649</td>\n",
-       "      <td>0.985745</td>\n",
-       "      <td>0.988950</td>\n",
-       "      <td>0.974592</td>\n",
-       "      <td>0.981718</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>0.023400</td>\n",
-       "      <td>0.058438</td>\n",
-       "      <td>0.988596</td>\n",
-       "      <td>0.990826</td>\n",
-       "      <td>0.980036</td>\n",
-       "      <td>0.985401</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>0.008400</td>\n",
-       "      <td>0.078122</td>\n",
-       "      <td>0.986458</td>\n",
-       "      <td>0.992593</td>\n",
-       "      <td>0.972777</td>\n",
-       "      <td>0.982585</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table><p>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 21%|██        | 500/2367 [02:03<07:45,  4.01it/s]"
+     ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{'loss': 0.1492, 'grad_norm': 15.595269203186035, 'learning_rate': 1.5775242923531897e-05, 'epoch': 0.63}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                  \n",
+      " 33%|███▎      | 789/2367 [03:21<06:37,  3.97it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'eval_loss': 0.08500158786773682, 'eval_accuracy': 0.9800427655024947, 'eval_precision': 0.9906191369606003, 'eval_recall': 0.9582577132486388, 'eval_f1': 0.974169741697417, 'eval_runtime': 6.6329, 'eval_samples_per_second': 211.522, 'eval_steps_per_second': 6.634, 'epoch': 1.0}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 42%|████▏     | 1001/2367 [04:16<05:43,  3.98it/s] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 0.0572, 'grad_norm': 0.030597150325775146, 'learning_rate': 1.1550485847063794e-05, 'epoch': 1.27}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 63%|██████▎   | 1500/2367 [06:23<03:48,  3.80it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 0.0256, 'grad_norm': 33.70209884643555, 'learning_rate': 7.325728770595691e-06, 'epoch': 1.9}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                   \n",
+      " 67%|██████▋   | 1578/2367 [06:50<03:26,  3.82it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'eval_loss': 0.05917755886912346, 'eval_accuracy': 0.9900213827512473, 'eval_precision': 0.9872958257713249, 'eval_recall': 0.9872958257713249, 'eval_f1': 0.9872958257713249, 'eval_runtime': 6.8243, 'eval_samples_per_second': 205.589, 'eval_steps_per_second': 6.448, 'epoch': 2.0}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 84%|████████▍ | 2000/2367 [08:42<01:33,  3.91it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 0.0129, 'grad_norm': 0.008272156119346619, 'learning_rate': 3.1009716941275882e-06, 'epoch': 2.53}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                   \n",
+      "100%|██████████| 2367/2367 [10:27<00:00,  3.81it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'eval_loss': 0.07192473113536835, 'eval_accuracy': 0.9878831076265147, 'eval_precision': 0.989010989010989, 'eval_recall': 0.9800362976406534, 'eval_f1': 0.9845031905195989, 'eval_runtime': 6.8182, 'eval_samples_per_second': 205.773, 'eval_steps_per_second': 6.453, 'epoch': 3.0}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2367/2367 [10:29<00:00,  3.76it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'train_runtime': 629.8208, 'train_samples_per_second': 60.131, 'train_steps_per_second': 3.758, 'train_loss': 0.053230527890700555, 'epoch': 3.0}\n",
       "Entrenamiento completado.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -775,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "id": "1658be8afcf57b4",
    "metadata": {
     "ExecuteTime": {
@@ -792,28 +849,24 @@
      ]
     },
     {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <div>\n",
-       "      \n",
-       "      <progress value='110' max='110' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [110/110 00:17]\n",
-       "    </div>\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 110/110 [00:16<00:00,  6.70it/s]"
+     ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Resultados de evaluación: {'eval_loss': 0.06179489195346832, 'eval_accuracy': 0.9843170801254634, 'eval_precision': 0.9845081332300543, 'eval_recall': 0.9732006125574273, 'eval_f1': 0.9788217173661917, 'eval_runtime': 17.717, 'eval_samples_per_second': 197.946, 'eval_steps_per_second': 6.209, 'epoch': 3.0}\n"
+      "Resultados de evaluación: {'eval_loss': 0.06474976986646652, 'eval_accuracy': 0.9860279441117764, 'eval_precision': 0.9801375095492743, 'eval_recall': 0.9823889739663093, 'eval_f1': 0.9812619502868068, 'eval_runtime': 16.8384, 'eval_samples_per_second': 208.274, 'eval_steps_per_second': 6.533, 'epoch': 3.0}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -823,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "id": "249e02267ab9f925",
    "metadata": {
     "ExecuteTime": {
@@ -847,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "f610a7fe0a5500fd",
    "metadata": {},
    "outputs": [],
@@ -915,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "b728c952",
    "metadata": {},
    "outputs": [
@@ -930,9 +983,9 @@
       "Texto: Dear valued customer, Your account has been suspended. \n",
       "    Click here immediately to verify your id...\n",
       "Predicción: Phishing Email\n",
-      "Confianza: 99.82%\n",
-      "Probabilidad de phishing: 99.82%\n",
-      "Probabilidad de seguro: 0.18%\n",
+      "Confianza: 99.91%\n",
+      "Probabilidad de phishing: 99.91%\n",
+      "Probabilidad de seguro: 0.09%\n",
       "--------------------------------------------------------------------------------\n",
       "\n",
       "Email #2:\n",
@@ -941,18 +994,18 @@
       "    2. Budget review\n",
       "    3...\n",
       "Predicción: Safe Email\n",
-      "Confianza: 99.96%\n",
-      "Probabilidad de phishing: 0.04%\n",
-      "Probabilidad de seguro: 99.96%\n",
+      "Confianza: 99.98%\n",
+      "Probabilidad de phishing: 0.02%\n",
+      "Probabilidad de seguro: 99.98%\n",
       "--------------------------------------------------------------------------------\n",
       "\n",
       "Email #3:\n",
       "Texto: URGENT: You've won $1,000,000! Send your bank details \n",
       "    to claim your prize now!!!...\n",
       "Predicción: Phishing Email\n",
-      "Confianza: 99.79%\n",
-      "Probabilidad de phishing: 99.79%\n",
-      "Probabilidad de seguro: 0.21%\n",
+      "Confianza: 99.95%\n",
+      "Probabilidad de phishing: 99.95%\n",
+      "Probabilidad de seguro: 0.06%\n",
       "--------------------------------------------------------------------------------\n",
       "\n"
      ]
